--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/react-dom": "^18.0.2",
     "firebase": "^9.7.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
