--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.79",
     "@mui/material": "^5.6.3",
     "@reduxjs/toolkit": "^1.8.1",
@@ -15,6 +16,7 @@
     "@types/node": "^17.0.29",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "@types/toastify-js": "^1.11.0",
     "bootstrap": "^5.1.3",
     "firebase": "^9.7.0",
     "formik": "^2.2.9",
